Bug 290947 - Dolphin 2.0 view modes are opened up misaligned (videos attached)
Summary: Dolphin 2.0 view modes are opened up misaligned (videos attached)
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-08 09:59 UTC by Nikita Skovoroda
Modified: 2012-01-17 22:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
The video of the bug. (267.37 KB, application/ogg)
2012-01-08 09:59 UTC, Nikita Skovoroda
Details
Video with another view-mode. (191.49 KB, application/ogg)
2012-01-08 10:02 UTC, Nikita Skovoroda
Details
Partial fix. (1.43 KB, patch)
2012-01-17 04:49 UTC, Nikita Skovoroda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Skovoroda 2012-01-08 09:59:16 UTC
Created attachment 67574 [details]
The video of the bug.

Version:           2.0 (using Devel) 
OS:                Linux

See the video.


Reproducible: Always

Steps to Reproduce:
Just switch the view mode. This depends on the window size, but can be easily reproduced (if you follow the video).

Actual Results:  
The viewmode contents are misaligned in the first second. They are animated to being fine aligned in the next moment, unwanted animation here.

Expected Results:  
Propertly aligned contents on initial open, no unneeded animation.
Comment 1 Nikita Skovoroda 2012-01-08 10:02:09 UTC
Created attachment 67575 [details]
Video with another view-mode.
Comment 2 Nikita Skovoroda 2012-01-08 10:12:03 UTC
This somehow depends on the old viewmode (from which i switch to the affected one).

On the same icons/window size table → icons is affected, but compact → icons and table → compact → icons are fine.

On another case (icons/window size) table → compact and icons → compact are both misaligned.

Switching to table view mode is always the same (in the context of this bug): at the very first moment columns are misaligned (scrollbars are not painted), but this is fixed much faster and without animation.
Comment 3 Nikita Skovoroda 2012-01-08 19:31:51 UTC
Can this be fixed before 4.8.0 release?
Comment 4 Nikita Skovoroda 2012-01-17 04:49:13 UTC
Created attachment 67915 [details]
Partial fix.

This fixes the most annoyng part of the bug: misaligned inital dolphin startup and refreshes (f5 key).

The cause was in scrollOffset always being compared to height, forgeting about scrollOrientation. It should be compared to the width when the scrollOrientation is horisontal.
Comment 5 Nikita Skovoroda 2012-01-17 04:50:17 UTC
Switching between views still may have items misaligned, the cause is a little different there.

The old viewsize remans on the first moment after view change (if there were scrollbars in the old view, the new view size is smaller than it should be).

I'm not exactly sure how to fix that.
Comment 6 Nikita Skovoroda 2012-01-17 04:51:30 UTC
Can you please at least include the partial fix (or the cleaned up version of it) in 4.8.0?
Comment 7 Peter Penz 2012-01-17 22:44:58 UTC
Git commit d43d0c4146cd0ab7218ed89334f220b0f4ff1398 by Peter Penz.
Committed on 17/01/2012 at 23:42.
Pushed by ppenz into branch 'master'.

Avoid unnecessary animations when switching view modes

Thanks to Nikita Skovoroda for the initial patch and the analyses.
FIXED-IN: 4.8.0

M  +24   -9    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/d43d0c4146cd0ab7218ed89334f220b0f4ff1398
Comment 8 Peter Penz 2012-01-17 22:45:53 UTC
Git commit c6e0fe2000186fb77b2b48c1880309f3eaf9e9b9 by Peter Penz.
Committed on 17/01/2012 at 23:42.
Pushed by ppenz into branch 'KDE/4.8'.

Avoid unnecessary animations when switching view modes

Thanks to Nikita Skovoroda for the initial patch and the analyses.
FIXED-IN: 4.8.0

M  +24   -9    dolphin/src/kitemviews/kitemlistview.cpp

http://commits.kde.org/kde-baseapps/c6e0fe2000186fb77b2b48c1880309f3eaf9e9b9