Avoid unnecessary animations when switching view modes

Thanks to Nikita Skovoroda for the initial patch and the analyses.

BUG: 290947
FIXED-IN: 4.8.0